--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 .header {
   display: flex;
   align-items: center;
-  height: 293px;
+  min-height: 293px; /* changed */
 }
 
 .header_menu-list {
@@ -54,7 +54,7 @@
   text-underline-offset: 3px;
 }
 
-.contacts_adress-street {
+.contacts_adress-no-underline {
   width: 237px;
 }
 
@@ -63,24 +63,24 @@
 /* SECOND BLOCK Cover*/
 
 .cover {
-  height: 757px;
+  min-height: 757px; /* changed */
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   position: relative;
-  z-index: -1;
+  z-index: 0; /* changed */
   display: grid;
+  padding: 50px 50px 0px 50px; /* changed, was 52px 0px 20px 0px; */
 }
 
 .background {
   height: 100%;
-  max-height: 757px; /*new*/
 }
 
 .background_image {
   width: 100%;
-  max-width: 1100px; /*new*/
+  min-width: 1100px; /* changed */
 }
 
 .overlay {
@@ -89,27 +89,28 @@
   inset: 0;
   background-color: rgba(0, 0, 0, 0.6);
   background-size: cover;
-  z-index: 0;
+  z-index: 1; /* changed */
   position: absolute;
 }
 
 .cover_title {
-  max-height: 355px;
+  min-height: 355px;
   font-weight: 700;
   font-size: 100px;
-  letter-spacing: 0.3em;
+  letter-spacing: 30px; /* changed, was 0.3em*/
   text-transform: uppercase;
   color: #fff;
   line-height: 1.15;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 120px 20px 125px 50px;
+  gap: 20px;
+  padding: 115px 0px 120px; /* changed, was   margin: 110px 30px 130px 50px;*/
 }
 
 .accent-span {
   display: block;
-  z-index: 1;
+  z-index: 2; /* chnaged */
 }
 
 .aligned-text-center {
@@ -123,19 +124,19 @@
 }
 
 .cover_title-spacing {
-  letter-spacing: 0.7em;
+  letter-spacing: 60px; /* changed, was 0.6em */
 }
 
 .cover_title-no-spacing {
-  letter-spacing: unset;
+  letter-spacing: initial; /* changed, was unset */
 }
 
 .cover_bottom-block {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-content: end;
-  z-index: 2;
+  justify-content: space-between; /* space-around; */
+  z-index: 3; /* changed */
+  padding: 15px 0 50px;
 }
 
 .cover_text {
@@ -145,12 +146,13 @@
   text-transform: uppercase;
   color: #fff;
   word-spacing: 0.9em;
-  z-index: 2;
+  z-index: 3; /* changed*/
   padding-top: 10px;
-  padding-left: 45px;
+  padding-left: 25px;
 }
 
 .bet-button {
+  font-family: Raleway, sans-serif; /* changed*/
   font-weight: 500;
   font-size: 22px;
   text-transform: uppercase;
@@ -159,7 +161,6 @@
   border: 1px solid;
   border-color: #fff;
   background-color: transparent;
-  margin: 0 17px;
   padding: 12px 32px;
   display: flex;
   flex-direction: column;
@@ -186,7 +187,7 @@
 
 .card_list {
   display: flex;
-  flex-direction: row;
+  flex-wrap: row wrap; /* changed*/
   gap: 25px;
   justify-content: space-evenly;
   list-style: none;
@@ -196,20 +197,19 @@
   min-width: 334px;
   min-height: 563px;
   margin-bottom: 28px;
-  padding: 52px 30px 25px 30px;
+  padding: 52px 40px 25px 40px;
   display: flex;
-}
-
-.first_card {
-  background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; /* changed */
   background-position: center;
   position: relative;
-  z-index: -1;
-  padding-left: 40px;
+  z-index: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.card_paul-anderson {
+  background-image: url(../images/card-lot-01.jpg); /*changed*/
 }
 
 .card_title {
@@ -221,7 +221,7 @@
   text-decoration-skip-ink: none;
   color: #fff;
   position: relative;
-  z-index: 1;
+  z-index: 1; /* changed */
 }
 
 .card-text {
@@ -232,30 +232,15 @@
   position: relative;
   padding-bottom: 20px;
   letter-spacing: normal;
+  z-index: 1; /* added */
 }
 
-.second_card {
-  background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  position: relative;
-  z-index: -1;
-  padding-left: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.card_james-joyce {
+  background-image: url(../images/card-lot-02.jpg); /* changed */
 }
 
-.third_card {
-  background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  position: relative;
-  z-index: -1;
-  padding-left: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.card_vasily-kandinsky {
+  background-image: url(../images/card-lot-03.jpg); /* changed */
 }
 
 .card-text-extended {
@@ -303,10 +288,9 @@
   width: 148px;
   height: auto;
   display: flex;
-  position: relative;
   z-index: 1;
-  top: -180px;
-  left: 48px;
+  margin-top: -180px;
+  margin-left: 48px; /* changed*/
 }
 
 .about_title {
@@ -320,7 +304,6 @@
 }
 
 .about_paragraph {
-  /* NEEDS SPANS in text */
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
@@ -328,7 +311,7 @@
   padding-bottom: 24px;
   padding-right: 30px;
 }
-.first-paragraph {
+.paragraph_small-spacing {
   letter-spacing: 0.01em;
 }
 
